--- a/importexporttools@pianon.eu/chrome/mboximport/locale/en-US/mboximport/mboximport.properties
+++ b/importexporttools@pianon.eu/chrome/mboximport/locale/en-US/mboximport/mboximport.properties
@@ -51,3 +51,15 @@ noPDFmultipleFolders=To export in PDF format, select just one folder
 isNotStandard=This "mbox" file uses a different format from the Thunderbird folder format\nand it's possible that Thunderbird can't handle it properly.\nDo you want to continue?
 noPDFmac=Because of a Thunderbird bug, the feature is not available on this platform
 noPDFnoPrinter=No printer seems installed on this machine. This feature requires at least one printer installed (also a virtual one)
+SMIMEverificationFailed=SMIME verification failed for some messages, see file SMIME_verification_errors.txt in backup folder for details
+SMIMEverificationSuccess=SMIME verification success
+SMIMEincorrectFormat=Incorrect message format
+SMIMEcantGetCertExpDate=Cannot get certificate expiration date
+SMIMEexpiredCert=Signer's certificate has expired
+SMIMEfailed=SMIME verification failed; message has been modified after the signature was made
+SMIMEverificationError=Error during verification
+SMIMEnoSMIMEmessage=Not a SMIME message
+SMIMEnoChildNodes=No child nodes
+SMIMEerrorsFilename=SMIME_verification_errors.txt
+HashListFilename=hash_list.txt
+HashListWithFilenamesFilename=hash_list_with_filenames.txt
