--- a/importexporttools@pianon.eu/chrome/mboximport/locale/it/mboximport/mboximport.dtd
+++ b/importexporttools@pianon.eu/chrome/mboximport/locale/it/mboximport/mboximport.dtd
@@ -13,6 +13,7 @@
 <!ENTITY MBlabel2 "Usa solo caratteri alfanumerici per l&apos;esportazione">
 <!ENTITY allMsgsFolder "Esporta i messaggi della cartella">
 <!ENTITY asEML "come file EML">
+<!ENTITY asPEC "come file EML con hash list e verifica SMIME (Backup PEC)">
 <!ENTITY asHTML "come file HTML">
 <!ENTITY asTXT "come file di testo">
 <!ENTITY saveSelected "Salva messaggi selezionati">
@@ -63,6 +64,7 @@
 <!ENTITY sdSelected "Selezionati">
 <!ENTITY sdFormat "Formato">
 <!ENTITY sdEML "EML">
+<!ENTITY sdPEC "EML+hash list+verifica SMIME">
 <!ENTITY sdHTML "HTML">
 <!ENTITY sdText "Formato testo">
 <!ENTITY searchAndExport "Cerca ed esporta">
@@ -81,7 +83,7 @@
 <!ENTITY importStructDescr2 "la directory con lo stesso nome e l'estensione 'sbd', se presente.">
 <!ENTITY abortExport "Interrompi l'esportazione dei messaggi">
 <!ENTITY allMsg "Esportazione di tutti i messaggi">
-<!ENTITY indexSettingLabel "Quando si esportano tutti i messaggi di una cartella di posta:">
+<!ENTITY indexSettingLabel "Quando si esportano tutti i messaggi di una cartella di posta (NB questa opzione viene ignorata nell'esportazione PEC):">
 <!ENTITY indexOn "crea una nuova cartella e l'indice dei messaggi">
 <!ENTITY indexOff "usa la cartella selezionata senza indice">
 <!ENTITY copyFolderPath "Copia il percorso della cartella">
