--- a/importexporttools@pianon.eu/chrome/mboximport/locale/it/mboximport/mboximport.properties
+++ b/importexporttools@pianon.eu/chrome/mboximport/locale/it/mboximport/mboximport.properties
@@ -51,3 +51,15 @@ noPDFmultipleFolders=Per esportare in PDF, seleziona una sola cartella
 isNotStandard=Questo file "mbox" usa un formato diverso da quello usato da Thunderbird\ned è possibile che non venga gestito correttamente, specie se proviene da Eudora.\nSi desidera continuare?
 noPDFmac=A causa di un bug di Thunderbird, questa funzione non è disponibile su questo sistema operativo
 noPDFnoPrinter=Sembra che non vi sia alcuna stampante installata su questo computer. Questa funzione richiede almeno una stampante installata (anche virtuale)
+SMIMEverificationFailed=verifica fallita per alcuni messaggi di PEC\nvedere il file errori_verifica_PEC.txt nella cartella di backup per i dettagli
+SMIMEverificationSuccess=verifica PEC completata con successo
+SMIMEincorrectFormat=Formato messaggio non corretto
+SMIMEcantGetCertExpDate=Impossibile ottenere la data di scadenza del certificato
+SMIMEexpiredCert=il certificato è scaduto
+SMIMEfailed=verifica PEC fallita; il messaggio è stato alterato dopo l'apposizione della firma digitale
+SMIMEverificationError=Errore durante la verifica del messaggio PEC
+SMIMEnoSMIMEmessage=Non è un messaggio SMIME/PEC
+SMIMEnoChildNodes=non ci sono child node: non è un messaggio SMIME/PEC
+SMIMEerrorsFilename=errori_verifica_PEC.txt
+HashListFilename=lista_hash.txt
+HashListWithFilenamesFilename=lista_hash_con_nomi_file.txt
