added option to cut complete file path length at 140 characters (for Ubuntu encrypted home and ecryptfs in general)

--- a/importexporttools@pianon.eu/chrome/mboximport/locale/ca/mboximport/mboximport.dtd
+++ b/importexporttools@pianon.eu/chrome/mboximport/locale/ca/mboximport/mboximport.dtd
@@ -70,7 +70,9 @@
 <!ENTITY addPrefix "Afegeix el prefix">
 <!ENTITY fileLenCaption "Longitud de noms de fitxer">
 <!ENTITY cutSub "Retalla l\'assumpte a 50 caràcters">
-<!ENTITY cutFN "Retalla la longitud del camí complet al fitxer a 256 caràcters">
+<!ENTITY cutFN "Retalla la longitud del camí complet al fitxer:">
+<!ENTITY at256 "a 256 caràcters">
+<!ENTITY at140 "a 140 caràcters (Ecryptfs Ubuntu home)">
 <!ENTITY sdMBOX "Mbox (nou)">
 <!ENTITY sdMBOX2 "Mbox (afegeix)">
 <!ENTITY asMBOX "com a fitxer Mbox (nou)">
