--- a/importexporttools@pianon.eu/chrome/mboximport/locale/hy-AM/mboximport/mboximport.dtd
+++ b/importexporttools@pianon.eu/chrome/mboximport/locale/hy-AM/mboximport/mboximport.dtd
@@ -70,7 +70,9 @@
 <!ENTITY addPrefix "Հավելել նախածանց">
 <!ENTITY fileLenCaption "Ֆայլերի անունների երկարությունը">
 <!ENTITY cutSub "Կտրել վերնագիրը 50 նիշի">
-<!ENTITY cutFN "Կտրել ֆայլի ամբողջական ճ-ի երկարությունը 256 նիշի">
+<!ENTITY cutFN "Կտրել ֆայլի ամբողջական ճ-ի երկարությունը">
+<!ENTITY at256 "256 նիշի">
+<!ENTITY at140 "140 նիշի (Ecryptfs Ubuntu home)">
 <!ENTITY sdMBOX "Mbox (նոր)">
 <!ENTITY sdMBOX2 "Mbox (ավելացնել)">
 <!ENTITY asMBOX "որպես Mbox ֆայլ (նոր)">
