--- a/importexporttools@pianon.eu/chrome/mboximport/locale/sk-SK/mboximport/mboximport.dtd
+++ b/importexporttools@pianon.eu/chrome/mboximport/locale/sk-SK/mboximport/mboximport.dtd
@@ -70,7 +70,9 @@
 <!ENTITY addPrefix "Pridať príponu">
 <!ENTITY fileLenCaption "Dĺžka názvov súborov">
 <!ENTITY cutSub "Prilepiť predmet - 50 znakov">
-<!ENTITY cutFN "Prilepiť kompletný názov s dĺžkou 256 znakov">
+<!ENTITY cutFN "Prilepiť kompletný názov s dĺžkou>
+<!ENTITY at256 "256 znakov"">
+<!ENTITY at140 "140 znakov" (Ecryptfs Ubuntu home)">
 <!ENTITY sdMBOX "Mbox">
 <!ENTITY sdMBOX2 "Mbox (rozšíriť)">
 <!ENTITY asMBOX "ako súbor Mbox (nový)">
