--- a/importexporttools@pianon.eu/chrome/mboximport/locale/en-US/mboximport/mboximport.properties
+++ b/importexporttools@pianon.eu/chrome/mboximport/locale/en-US/mboximport/mboximport.properties
@@ -63,3 +63,4 @@ SMIMEnoChildNodes=No child nodes
 SMIMEerrorsFilename=SMIME_verification_errors.txt
 HashListFilename=hash_list.txt
 HashListWithFilenamesFilename=hash_list_with_filenames.txt
+RepairedMessageNotice=repaired %n messages, that have been incorrectly downloaded by Thunderbird
