--- a/importexporttools@pianon.eu/chrome/mboximport/locale/it/mboximport/mboximport.properties
+++ b/importexporttools@pianon.eu/chrome/mboximport/locale/it/mboximport/mboximport.properties
@@ -63,3 +63,4 @@ SMIMEnoChildNodes=non ci sono child node: non è un messaggio SMIME/PEC
 SMIMEerrorsFilename=errori_verifica_PEC.txt
 HashListFilename=lista_hash.txt
 HashListWithFilenamesFilename=lista_hash_con_nomi_file.txt
+RepairedMessageNotice=riparati %n messaggi, che non erano stati scaricati correttamente da Thunderbird
