workaround for issue #13

--- a/importexporttools@pianon.eu/chrome/mboximport/locale/en-US/mboximport/mboximport.properties
+++ b/importexporttools@pianon.eu/chrome/mboximport/locale/en-US/mboximport/mboximport.properties
@@ -64,3 +64,4 @@ SMIMEerrorsFilename=SMIME_verification_errors.txt
 HashListFilename=hash_list.txt
 HashListWithFilenamesFilename=hash_list_with_filenames.txt
 RepairedMessageNotice=repaired %n messages, that have been incorrectly downloaded by Thunderbird
+subfoldersIssueWarning="Warning: search in subfolders may make PEC backup not work in some systems"
