--- a/importexporttools@pianon.eu/chrome/mboximport/locale/it/mboximport/mboximport.properties
+++ b/importexporttools@pianon.eu/chrome/mboximport/locale/it/mboximport/mboximport.properties
@@ -64,3 +64,4 @@ SMIMEerrorsFilename=errori_verifica_PEC.txt
 HashListFilename=lista_hash.txt
 HashListWithFilenamesFilename=lista_hash_con_nomi_file.txt
 RepairedMessageNotice=riparati %n messaggi, che non erano stati scaricati correttamente da Thunderbird
+subfoldersIssueWarning="Attenzione: la ricerca nelle sottocartelle potrebbe bloccare \nil backup delle PEC in alcuni sistemi, la disabilito.\nSe vuoi, riabilitala a tuo rischio e pericolo!"
