original 3.3.0 version by Paolo "Kaosmos"

--- a/importexporttools@pianon.eu/chrome/mboximport/locale/nl/mboximport/mboximport.properties
+++ b/importexporttools@pianon.eu/chrome/mboximport/locale/nl/mboximport/mboximport.properties
@@ -1,53 +1,53 @@
 nomboxfile=lijkt geen mbox-bestand te zijn\nof is een beschadigd mbox-bestand
-folderexists=Importeren mislukt: er bestaat al een map met deze naam
-fileexists=Exporteren mislukt: er bestaat al een bestand met deze naam
-nowritable=Exporteren mislukt: u hebt geen schrijfrechten in de map
-exportOK=Exporteren succesvol
-isNewsgroup=Mogelijkheid niet beschikbaar: het is alleen mogelijk\nom te exporteren van een IMAP of NEWS account als de\nmap is ingesteld op offline gebruik
-nofolder=Geen doelmap ingesteld
-badfolder=Importeren in deze map (IMAP of Nieuwsgroeptype) mislukt
+folderexists=Kan niet importeren: er bestaat al een map met deze naam
+fileexists=Kan niet exporteren: er bestaat al een bestand met deze naam
+nowritable=Kan niet exporteren: u hebt geen schrijfrechten in de map
+exportOK=Exporteren uitgevoerd
+isNewsgroup=Functie niet beschikbaar: het is alleen mogelijk om vanuit\neen IMAP- of nieuwsaccount te exporteren als de map voor\nofflinegebruik is ingesteld
+nofolder=Geen doelmap geselecteerd
+badfolder=Importeren in deze map is niet mogelijk (IMAP- of nieuwsgroeptype)
 exportAccount=Alle mappen exporteren
 exportFolder=Map exporteren
 filePickerImport=Selecteer het te importeren mbox-bestand
 filePickerExport=Selecteer de doelmap
-extensions.{3ed8cc52-86fc-4613-9026-c1ef969da4c3}.description=Voegt wat hulpmiddelen toe om berichten en mappen te importeren en exporteren
-virtualfolder=Dit is een virtuele map. Om de berichten die erin staan\nte exporteren dient u ze naar een normale map te kopiëren\nen deze normale map te exporteren
-searchdir=Selecteer een map waarin de bestanden gezocht moeten worden
+extensions.{3ed8cc52-86fc-4613-9026-c1ef969da4c3}.description=Voegt enkele hulpmiddelen toe om berichten en mappen te importeren en exporteren
+virtualfolder=Dit is een virtuele map. Om de berichten ervan te exporteren\nmoet u ze naar een normale map kopiëren en deze normale map\nexporteren
+searchdir=Selecteer een map om de bestanden te zoeken
 confirmimport=Wilt u dit bestand importeren:
-endscan=Mapscan doorlopen
-internalerror=Importeren mislukt vanwege een onbekende fout
-exportstart=Exporteren… een ogenblik geduld
+endscan=Mapscan voltooid
+internalerror=Kan niet importeren vanwege een onbekende fout
+exportstart=Exporteren… Een ogenblik geduld
 exported=Geëxporteerd:
 msgs=berichten van de
 nosubjectmsg=geen_onderwerp
 messsubdir=berichten
-badfolder2=Importeren in deze map niet mogelijk (IMAP of Nieuwsgroep of virtueel type)
-temp_error=Importeren onmogelijk: er is een fout opgetreden bij het aanmaken van een tijdelijk bestand
-importEMLstart=Importeren… een ogenblik geduld
+badfolder2=Importeren in deze map is niet mogelijk (virtueel, IMAP- of nieuwsgroeptype)
+temp_error=Importeren niet mogelijk: er is een fout opgetreden bij het aanmaken van een tijdelijk bestand
+importEMLstart=Importeren… Een ogenblik geduld
 numEML=Geïmporteerde eml-bestanden:
 CSVseparator=,
-noEML=Geen eml-bestand gevonden in deze map\nbackupWarning=Tijdens uitvoering is het mogelijk dat het programma enige\ntijd niet reageert.\nWilt u doorgaan?
-backupWarning=Tijdens uitvoering is het mogelijk dat\nhet programma enige tijd niet reageert.\nWilt u doorgaan?\n
-noWaring=Deze waarschuwing niet meer weergeven
+noEML=Geen eml-bestand gevonden in deze map
+backupWarning=Tijdens deze bewerking kan het programma\nenkele minuten niet reageren.\nWilt u doorgaan?\n
+noWaring=Deze waarschuwing niet meer tonen
 emailFiles=E-mailbestanden
 filePickerImportMSG=Selecteer de te importeren berichten
 filePickerAppend=Selecteer het mbox-bestand
-virtFolAlert=Virtuele mappen kunnen in deze opmaak alleen apart worden geëxporteerd
+virtFolAlert=Virtuele mappen kunnen in deze indeling alleen apart worden geëxporteerd
 exportAborted=Exporteren gestopt
 # SMS Backup and Restore\' is the name of an Android application and so maybe it\'s better not to translate it\n
 importSMSandroid=Sms importeren (SMS Backup & Restore voor Android)
-noFolderExport=Kan niet exporteren.\nDe geselecteerde mappen zijn van verschillende typen of één ervan is een virtuele map.
-remoteWarning=U exporteert de lokale kopie van een IMAP- of NEWS-map.\nDe lokale map bevat mogelijk niet alle berichten die in de map op afstand staan.\nWilt u doorgaan?
+noFolderExport=Kan niet exporteren.\nDe geselecteerde mappen hebben een verschillend type, of één ervan is een virtuele map.
+remoteWarning=U exporteert de lokale kopie van een IMAP- of nieuwsmap.\nMogelijk bevat de lokale map niet alle berichten die in de externe map aanwezig zijn.\nWilt u doorgaan?
 offlineWarning=Deze map is offline.\nAlleen de lokaal opgeslagen berichten worden geëxporteerd. Wilt u doorgaan?
-noRemoteExport=Deze map op afstand kan niet worden geëxporteerd omdat deze niet online is.
-noMboxStorage=Kan geen map van het type “mbox” in een andere opmaak importeren naar een account
-noMaildirStorage=Kan geen map van het type “maildir” in een andere opmaak importeren naar een account
-isEudora=Dit “mbox”-bestand lijkt afkomstig uit Eudora.\nThunderbird kan hier niet mee overweg, dus u dient het te converteren naar de standaard-“mbox”-opmaak.
-isNotMaildir=De te importeren map is geen “maildir”-map
-needTB3=Voor deze functie dient u Thunderbird 3 of hoger te gebruiken
-formatWarning=Bij exporteren in HTML- of platte tekstopmaak worden de bijlagen niet opgeslagen.\nIndien u ook de bijlagen wilt opslaan dient u de EML-opmaak te gebruiken.\nWilt u doorgaan?
-formatWarningImport=Als u deze opmaak gebruikt is het niet mogelijk de geëxporteerde berichten te importeren.\nWilt u doorgaan?\n
-noPDFmultipleFolders=Selecteer slechts één map om te exporteren in PDF-opmaak
-isNotStandard=Dit “mbox”-bestand gebruikt een andere opmaak dan een Thunderbird-map\nen mogelijk kan Thunderbird dit niet goed verwerken.\nWilt u doorgaan?
-noPDFmac=Vanwege een bug in Thunderbird is deze functie op dit platform niet beschikbaar
-noPDFnoPrinter=Er lijkt geen printer te zijn geïnstalleerd op dit apparaat. Deze functie vereist de installatie van ten minste één printer (ook een virtuele)
+noRemoteExport=Kan deze externe map niet exporteren, omdat deze niet online is.
+noMboxStorage=Importeren van een ‘mbox’-map is niet mogelijk in een account die een andere indeling gebruikt
+noMaildirStorage=Importeren van een ‘maildir’-map is niet mogelijk in een account die een andere indeling gebruikt
+isEudora=Dit ‘mbox’-bestand lijkt afkomstig uit Eudora.\nThunderbird kan hier niet mee overweg, dus u moet het converteren naar de standaard ‘mbox’-indeling.
+isNotMaildir=De te importeren map is geen ‘maildir’-map
+needTB3=Voor deze functie moet u Thunderbird 3 of hoger gebruiken
+formatWarning=Als u in deze indeling exporteert, worden de bijlagen niet opgeslagen.\nAls u ook de bijlagen wilt opslaan, kies dan een andere indeling.\nWilt u doorgaan?
+formatWarningImport=Als u deze indeling gebruikt, zult u de geëxporteerde berichten niet kunnen importeren.\nWilt u doorgaan?\n
+noPDFmultipleFolders=Selecteer slechts één map om te exporteren in PDF-indeling
+isNotStandard=Dit ‘mbox’-bestand gebruikt een andere indeling dan de Thunderbird-map,\nen mogelijk kan Thunderbird dit niet goed verwerken.\nWilt u doorgaan?
+noPDFmac=Vanwege een bug in Thunderbird is de functie niet beschikbaar op dit platform
+noPDFnoPrinter=Er lijkt geen printer op deze machine te zijn geïnstalleerd. Deze functie vereist minstens één geïnstalleerde printer (ook een virtuele).
