--- a/importexporttools@pianon.eu/chrome/mboximport/locale/nl/mboximport/profilewizard.properties
+++ b/importexporttools@pianon.eu/chrome/mboximport/locale/nl/mboximport/profilewizard.properties
@@ -1,3 +1,3 @@
-profilePath=Het pad naar het geïmporteerde profiel is:
+profilePath=Het pad van het geïmporteerde profiel is:
 noProfile=Deze map bevat geen geldig profiel
-pickProfile=Pad naar te importeren profiel:
+pickProfile=Pad van het te importeren profiel:
