--- a/importexporttools@pianon.eu/chrome/mboximport/locale/nl/mboximport/autobackup.dtd
+++ b/importexporttools@pianon.eu/chrome/mboximport/locale/nl/mboximport/autobackup.dtd
@@ -1,10 +1,10 @@
 <!ENTITY dialog.title "ImportExportTools - Back-up">
-<!ENTITY description1 "Datum laatste back-up: $t">
+<!ENTITY description1 "Datum van laatste back-up: $t">
 <!ENTITY description2 "Op basis van uw instellingen is het nodig nu een back-up te maken.">
-<!ENTITY description3 "Tijdens deze back-up is het mogelijk dat het programma gedurende een paar minuten niet reageert.">
+<!ENTITY description3 "Tijdens deze bewerking zal het programma enkele minuten niet reageren.">
 <!ENTITY description4 "Wilt u doorgaan?">
-<!ENTITY description5 "Back-up wordt uitgevoerd… een ogenblik geduld.">
-<!ENTITY description6 "Back-up is klaar.">
+<!ENTITY description5 "Back-up wordt uitgevoerd… Een ogenblik geduld.">
+<!ENTITY description6 "Back-up is gereed.">
 <!ENTITY backupTab "Back-upschema">
 <!ENTITY backupSettings "Back-upinstellingen">
 <!ENTITY backupOn "Inschakelen">
@@ -23,7 +23,7 @@
 <!ENTITY justMailFiles "Alleen mailbestanden">
 <!ENTITY lastBackup "Laatste back-up">
 <!ENTITY allFilesMode "Altijd alle bestanden">
-<!ENTITY newFilesMode "Alleen bestanden die zijn gewijzigd sinds laatste back-up">
+<!ENTITY newFilesMode "Alleen bestanden die na de laatste back-up zijn gewijzigd">
 <!ENTITY save "Opslaan">
 <!ENTITY modal "‘Modaal’ venster gebruiken">
-<!ENTITY MACwarning "N.B.: sluit alle overige vensters voordat u doorgaat.">
+<!ENTITY MACwarning "NB Sluit alle andere vensters voordat u doorgaat.">
