--- a/importexporttools@pianon.eu/chrome/mboximport/locale/nl/mboximport/autobackup.properties
+++ b/importexporttools@pianon.eu/chrome/mboximport/locale/nl/mboximport/autobackup.properties
@@ -1,3 +1,3 @@
 fpTitle=Doelmap voor back-up instellen
-noBackup=Kan back-up niet uitvoeren: controleer het pad naar en de permissies voor de doelmap
-noDelete=Back-up uitgevoerd, maar de oude back-upmap kon niet worden verwijderd.\nControleer permissies voor bestanden en mappen.
+noBackup=Kan back-up niet uitvoeren: controleer pad en machtigingen van doelmap
+noDelete=Back-up uitgevoerd, maar de oude back-upmap kon niet worden verwijderd.\nControleer de machtigingen van bestanden en mappen.
